Hyphen-Charakter (-) durch Steuerbefehl ("=) ersetzt, um bessere Trennung zu erreichen

--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@
 %\clearpage
 
 \begin{abstract}
-Diese Zusammenstellung enthält Tipps zur Vorbereitung und Durchführung eines einwöchigen \rv-Trainingslager zu Hause (\tlzh).
+Diese Zusammenstellung enthält Tipps zur Vorbereitung und Durchführung eines einwöchigen \rv"=Trainingslager zu Hause (\tlzh).
 Dabei werden die Vor- und Nachteile erörtert im Vergleich zu einem konventionellen Trainingslager
 (typischerweise fremdorganisiert und in mediterranen Regionen). 
 Dies mit dem Ziel eines optimalen Resultates im Verhältnis zur aufgewendeten Zeit und anfallenden Kosten.
@@ -104,9 +104,9 @@ Dies mit dem Ziel eines optimalen Resultates im Verhältnis zur aufgewendeten Ze
 \section{Einleitung}
 
 Ein Trainingslager (TL) im Frühling dient dazu
-schon früh stabile Grundlagen für die anstehende \rv-Saison zu legen.
+schon früh stabile Grundlagen für die anstehende \rv"-Saison zu legen.
 Neben dem körperlichen Training kann man sich in einem TL auch mit anderen Themen rund um das Training beschäftigen.
-Beispiele sind: Ernährung, Regeneration, \rv-Technik oder Radrennhistorie.
+Beispiele sind: Ernährung, Regeneration, \rv"=Technik oder Radrennhistorie.
 Durch eine solche Immersion in die Materie wird die Motivation weit über das TL hinaus gestärkt.
 
 Wird von einem Trainings\textsl{lager} gesprochen, impliziert das ein Ortswechsel.
@@ -115,9 +115,9 @@ Typischerweise an einen Ort, wo Frühling ist, wenn in Nord- und Mitteleuropa no
 In der Regel wird dazu ein Pauschalangebot mit Hotel, geführten Trainingstouren und Möglichkeit der \rv-Miete.
 Etwas luxuriösere Angeboten bieten noch Trainingsplanung, Begleitfahrzeug, Schrauberplatz und Massage.
 
-Es gibt m.E. jedoch wenig wirklich objektive Gründe, als Nicht-Profi für ein TL zu verreisen.
+Es gibt m.E. jedoch wenig wirklich objektive Gründe, als Nicht"=Profi für ein TL zu verreisen.
 Umso mehr, als ein solches TL sich prima zu Hause durchführen lässt.
-Ich bin überzeugt, dass ein \tlzh{} mehr Vor- als Nachteile hat und genau so viel Spass macht.
+Ich bin überzeugt, dass ein \tlzh{} mehr Vor"= als Nachteile hat und genau so viel Spass macht.
 Die folgende Zusammenstellung von Tipps und Hinweisen soll helfen, die Vorteile gut zu nutzen und allfällige Nachteile
 auszugleichen.
 
@@ -132,7 +132,7 @@ auszugleichen.
 Der augenscheinlichste Vorteil:
 ein \tlzh{} kommt \emph{wesentlich günstiger} als ein TL an einer der üblichen Destinationen.
 Die Preise für fremdorganisierte TL unterscheiden sich stark
-und sind abhängig von der Hotel-Qualität und dem gebotenen Service.
+und sind abhängig von der Hotel"=Qualität und dem gebotenen Service.
 (für den von vielen angebotene Klassiker Mallorca siehe Tabelle \ref{tab:preisvergleich}.
 Zu den Kosten des TL kommt der der Flug, allenfalls Transport des \rv{} oder dessen Miete vor Ort.
 Die Mitnahme des eigenen Fahrrades kostet bei der Swiss in Europaflügen CHF 60 (EUR 50) und bei Interkoninentalflügen CHF 120 (EUR 100)
@@ -146,19 +146,19 @@ Das ist ein Haufen Schotter.
   \centering
   \begin{tabular}{lrl}
     \toprule
-        Anbieter-Website & CHF/Euro & Bemerkungen \\
+        Anbieter"=Website & CHF/Euro & Bemerkungen \\
     \midrule
-        \url{hoechstform.ch} & 1500/\textsl{1357} & Frühbuch-Preis, 4-Stern-Hotel, Wellness-Anlage \\
-        \url{www.champions-training.de} & \textsl{618}/559 & im DZ, 4-Stern-Hotel, Wellness-Anlage \\
+        \url{hoechstform.ch} & 1500/\textsl{1357} & Frühbuch"=Preis, 4"=Stern"=Hotel, Wellness"=Anlage \\
+        \url{www.champions-training.de} & \textsl{618}/559 & im DZ, 4"=Stern"=Hotel, Wellness"=Anlage \\
         \url{www.huerzeler.com} & 645/\textsl{584} & incl. Flug ab Zürich od. Basel\\
         \url{www.radsport-mallorca.de} & 495/445 & im DZ \\
-        \url{www.kollerbike.ch} & 413/\textsl{373} & 3-Personen-Appartement, 3-Stern-Hotel \\
+        \url{www.kollerbike.ch} & 413/\textsl{373} & 3"=Personen"=Appartement, 3"=Stern"=Hotel \\
     \bottomrule
   \end{tabular}
-  \caption{Preisübersicht Februar 2016 für eine Woche Rennrad-Training in Mallorca,
+  \caption{Preisübersicht Februar 2016 für eine Woche Rennrad"=Training in Mallorca,
     von deutschen und schweizerischen Anbietern.
     Jeweils unter Berücksichtigung des günstigsten Angebotes.
-    Wenn nichts angegeben sind die Preise ohne Flug und ohne Miet-Rennrad.
+    Wenn nichts angegeben sind die Preise ohne Flug und ohne Miet"=Rennrad.
   Preise in kursiv sind jeweils von der anderen Währung umgerechnet.}
   \label{tab:preisvergleich}
 \end{table}
@@ -195,7 +195,7 @@ In einem Trainingslager hunderte von Kilometern zu Hause fällt die Abgrenzung z
 man kann sich ganz auf die gliebte Sache konzentrieren.
 Die alltäglichen Pflichten -- Einkaufen, Kochen, Bett machen -- werden einem in einem Hotel abgenommen.
 
-Es fehlen zu Hause das gewisse \emph{Profi-Equipment}: kein Guide, kein Begleitwagen, keine Massage im Hotel.
+Es fehlen zu Hause das gewisse \emph{Profi"=Equipment}: kein Guide, kein Begleitwagen, keine Massage im Hotel.
 
 Das Fahren in der Gruppe kann nicht speziell geübt werden.
 
@@ -210,12 +210,12 @@ Der folgende Text beschäftigt sich nicht zuletzt auch mit diesen -- in meinen A
 
 Der Hauptgrund eines TL im Süden ist das Klima.
 Daran gibt es nichts zu rütteln: Temperaturen über \unit[10]{\degree C} gibt es in der Schweiz, Deutschland oder Oesterreich
-drei Monate später als in den bevorzugten südlichen TL-Destinationen (Tabelle \ref{tab:tempmax}).
+drei Monate später als in den bevorzugten südlichen TL"=Destinationen (Tabelle \ref{tab:tempmax}).
 Interessant dabei ist aber, dass der Februar in unseren Breitengraden
 wohl kalt aber sehr trocken ist.
 Der Februar hat im Mittel \textit{am wenigsten Niederschläge} von allen Monaten (Tabelle \ref{tab:niederschlag}).
 Der März ewas milder und immer noch sehr trocken.
-Mit geeigneter Bekleidung ist also ein \rv-Training im Februar oder März
+Mit geeigneter Bekleidung ist also ein \rv"=Training im Februar oder März
 in unseren Breitengraden durchführbar.
 
 \begin{table}
@@ -271,7 +271,7 @@ Strassenzustand:
 zu Beginn des Frühlings sind die Strassen durch Split, Salz und allenfalls liegengebliebener Schnee nicht ideal.
 Um Salzschäden zu vermeiden soll das Rad nach der Ausfahrt auch mit Wasser abgespühlt werden.
 
-Vorteilhaft für das Ferientage-Budget ist eine Woche,
+Vorteilhaft für das Ferientage"=Budget ist eine Woche,
 die bereits offizielle Feiertage enthält.
 So können mit wenig eingesetzten Urlaubstage eine schöne Anzahl
 aneinanderhängender Trainingstage gewonnen werden.
@@ -280,7 +280,7 @@ in der man mit vier eingesetzten Ferientagen gleich 10 Tage am Stück zum Traini
 (Tabelle \ref{tab:karwoche}).
 Der Nachteil an der Karwoche ist, dass diese in der Regel im April liegt,
 der deutlich mehr Niederschläge hat.
-\footnote{Ein kleiner Hinweis für Linux-Anwender:
+\footnote{Ein kleiner Hinweis für Linux"=Anwender:
 mit dem Terminalbefehl \texttt{ncal -e JJJJ} erhält man direkt das
 Datum des Ostersonntages des entsprechenden Jahres. Also mit \texttt{ncal -e 2026}
 den 5.\,April 2026.}
@@ -289,7 +289,7 @@ den 5.\,April 2026.}
         \centering
         \begin{tabular}{ccc}
                 \toprule
-                    Jahr & Wochen-Nr. & Ferieneingabe (Sa -- Mo)\\
+                    Jahr & Wochen"=Nr. & Ferieneingabe (Sa -- Mo)\\
                 \midrule
                     2016 & 12 & 19.03.16 -- 28.03.16 \\
                     2017 & 15 & 08.04.17 -- 17.04.17 \\
@@ -329,12 +329,12 @@ Grundsätzliches Vorgehen bei der Planung (modifiziert nach \citeNP{Beck2015}):
     \toprule
     & Dauer [h] & Trainingsbereich \\
     \midrule
-        Tag 1 & 3:00 & GA1-Bereich \\
-        Tag 2 & 3:30 & GA1-Bereich \\
+        Tag 1 & 3:00 & GA1"=Bereich \\
+        Tag 2 & 3:30 & GA1"=Bereich \\
         Tag 3 & -- & Regeneration \\
-        Tag 4 & 3:30 & GA1/2-Bereich \\
-        Tag 5 & 3:00 & GA1/2-Bereich \\
-        Tag 6 & 4:00 & GA1/2-Bereich \\
+        Tag 4 & 3:30 & GA1/2"=Bereich \\
+        Tag 5 & 3:00 & GA1/2"=Bereich \\
+        Tag 6 & 4:00 & GA1/2"=Bereich \\
     \bottomrule
 \end{tabular}
 \caption{Beispiel für die Gestaltung eines Trainingslagers mit 6 Trainingstagen \protect\cite{Beck2015}.}
@@ -346,7 +346,7 @@ sondern als Ausbautraining, resp. ganz konkret in die Wettkampfvorbereitung einz
 Das Trainingslager wird also nicht für die Grundlage sondern für das <<Peaking>> eingesetzt.
 Damit (von englisch \textit{peak} für Gipfel) wird gezielte Optimierung der Form auf einen Wettkampf bezeichnet.
 Voraussetzung dazu ist natürlich, dass das Grundlagentraining vorgängig auf der Rolle geleistet wurde.
-\citeNP{Beck2011} stellt ein 6-Wochen-Programm im Vorfeld eines Wettkampfs vor.
+\citeNP{Beck2011} stellt ein 6"=Wochen"=Programm im Vorfeld eines Wettkampfs vor.
 Ideal wäre hier, das TL in den Wochen 6, 5 oder 3 dieser Vorbereitungsphase zu legen.
 
 \begin{itemize*}
@@ -354,19 +354,19 @@ Ideal wäre hier, das TL in den Wochen 6, 5 oder 3 dieser Vorbereitungsphase zu 
                 Grundlagenausdauer mit langen und lockeren Einheiten.
                 Eine davon soll mindestens so lange dauern wie der geplante Wettkampf.
         \item Woche 5 Intensität erhöhen:
-                Intensivere Intervalle im GA2-Bereich:
-                Dazu Trittfrequenz-Training mit 100 Umdrehungen pro Minute.
+                Intensivere Intervalle im GA2"=Bereich:
+                Dazu Trittfrequenz"=Training mit 100 Umdrehungen pro Minute.
                 Die Anstrengenden Einlagen von 20--30 Minuten in Grundlagenausfahrten integrieren.
         \item Woche 4 Vorbereitung aufs harte Training:
                 Grundlagenausdauer von kürzerer Dauer von 1.5 bis 2 Stunden
                 um die Grundlage zu stabilisieren.
         \item Woche 3 Feinschliff:
-                Intensives Training (HIT, Training am Berg, Sprint-Intervalle) oder ein Vorbereitungswettkampf.
+                Intensives Training (HIT, Training am Berg, Sprint"=Intervalle) oder ein Vorbereitungswettkampf.
         \item Woche 2 Regeneration:
                 Zwei bis drei lockere Runden. Regeneration mit Schlafen, Massage und Sauna.
         \item Woche 1 Rennen optimal vorbereiten:
                 Spezielles Training: Dienstag 2h GA1, Mittwoch 2h GA1, Donnerstag 2h lockere Einheit, Freitag Ruhetag, 
-                Samstag 1h GA1-Einheit mit 2mal 2 Minuten EB-Training.
+                Samstag 1h GA1-Einheit mit 2mal 2 Minuten EB"=Training.
 
 \end{itemize*}
 
@@ -399,7 +399,7 @@ Ein Vorschlag für eine Tagesplanung findet sich bei \citeNP{Boehme2016trainings
     \midrule
  08:00 Uhr & Frühstück & mindestens 2 Stunden vor dem Training frühstücken.\\
   09:30 Uhr & Radcheck & \\
-  10:00 Uhr & Ausfahrt & bei 4 Stunden unterbrochen durch eine 15-30-minütige Pause \\
+  10:00 Uhr & Ausfahrt & bei 4 Stunden unterbrochen durch eine 15"=30"=minütige Pause \\
   15:00 Uhr & spätes Mittagessen & \\
   16:00 Uhr & Gymnastik & aufdehnen und strecken (z.B. mit Yoga) \\
   16:30 Uhr & Powernap & \\
@@ -460,11 +460,11 @@ Bezüglich Verhaltensänderung gibt es für Fahren bei Kälte im Netz und Fachze
         \item Kleidung:
                 Zwiebelschalenprinzip der Kleidung (mehrere Schichten sind effektiver),
                 Zeitung oder Plastiktüte als Windschutz unter das Trikot schieben,
-                Zehen mit einer <<Kappe>> aus Aluminium-Folie vor Kälte schützen,
+                Zehen mit einer <<Kappe>> aus Aluminium"=Folie vor Kälte schützen,
                 Ueberschuhe oder ein altes Paar Socken (mit Loch für die Cleats),
-                ein Paar dünner Gummihandschuhe über die \rv-Handschuhe ziehen,
+                ein Paar dünner Gummihandschuhe über die \rv"=Handschuhe ziehen,
                 Frischhaltefolie über den Helm gezogen,
-                trockenes Ersatz-Trikot für Kaffee-Stopp.
+                trockenes Ersatz"=Trikot für Kaffee"=Stopp.
         \item Ausrüstung:
                 Isolierte Trinkflasche,
                 Zwei Ersatzschläuche mitführen,
@@ -474,8 +474,8 @@ Bezüglich Verhaltensänderung gibt es für Fahren bei Kälte im Netz und Fachze
         \item Rad:
                 Reifendruck um 0.5 -- 1.0 bar reduzieren.
                 Reifen regelmässig kontrollieren,
-                All-Wetter-Reifen (z.B. Four Season von Continental, Durano von Schwalbe) montieren,
-                kleine Akku-Leuchten auch für den Tag,
+                All"=Wetter"=Reifen (z.B. Four Season von Continental, Durano von Schwalbe) montieren,
+                kleine Akku"=Leuchten auch für den Tag,
                 Reflektoren an Rad und Kleidung,
                 Spritzschutz montieren,
                 Reinigung und Schmieren des Bikes nach jeder Fahrt,
@@ -489,7 +489,7 @@ Es besteht die Gefahr, dass die Verpflichtungen des Alltags jedoch nicht ausreic
 Hier gilt es, die Belastung in dieser Phase gering zu halten: Termine und Pendenzen sollen vor dem TL erledigt werden.
 
 Es ist immer gut, wenn die Familie oder der Partner miteinbezogen wird.
-So ein Camp ist ein kleiner Ego-Trip. Der steht einem zu, soll aber auch in Familie und Partnerschaft eingebettet werden.
+So ein Camp ist ein kleiner Ego"=Trip. Der steht einem zu, soll aber auch in Familie und Partnerschaft eingebettet werden.
 Vielleicht findet die Familie das ja auch toll und man verspricht sich, gegenseitig regelmässig bei solchen <<Camps zu Hause>> zu unterstützen.
 
 Beim Schlaf sollte auf ein ausreichendes Pensum und Rhythmus geachtet werden.
@@ -501,9 +501,9 @@ Sei es Sauna \cite[S. 795]{Weineck2010}, Thermalbad.
 Wer hart zu Hause trainiert, sollte sich auch den nötigen Luxus gönnen.
 Alles, was hilft, schneller zu regenerieren und sich wieder fit für den nächsten Tag zu machen, sollte unternommen werden.
 
-% \subsection{Open-Window-Phänomen}
+% \subsection{Open"=Window"=Phänomen}
 % 
-% Der Begriff des Open-Window-Phänomen beschreibt die immunologische Schwäche nach sportlicher Betätigung.
+% Der Begriff des Open"=Window"=Phänomen beschreibt die immunologische Schwäche nach sportlicher Betätigung.
 % 
 
 \section{Nebenprojekte umsetzen}
@@ -513,8 +513,8 @@ Diese kann genutzt werden, um Projekte rund um das \rv{} umzusetzen.
 
 \begin{itemize}
         \item Einarbeitung ins Tracken von Routen.
-        \item Sport-Ernährung: Rezepte umsetzen, Riegel selber machen.
-        \item Rennsport-Geschichte: Bücher zum Thema Radrennsport lesen.
+        \item Sport"=Ernährung: Rezepte umsetzen, Riegel selber machen.
+        \item Rennsport"=Geschichte: Bücher zum Thema Radrennsport lesen.
         \item Werkstatt: Aufbau einer eigenen Radwerkstatt (Schrauberecke).
                 Dazu Literatur studieren und allenfalls eigenes kleines Projekt durchziehen.
         \item Regelmässig in den entsprechenden Foren aktiv werden.
@@ -564,7 +564,7 @@ Es beinhaltet diese angespannte Stimmungslage, in der man den Fokus auf das (ent
 Gerade \emph{weil} man bei einem \tlzh{} nicht diesen Aufwand betreiben muss, besteht die Gefahr,
 dass man bezüglich Vorbereitungen die Zügel schleifen lässt.
 Das Trainingslager beginnt nämlich ab dem Moment, an dem man am letzten Tag von der Arbeit kommt und
-die Mappe, den Aktenkoffer, den City-Rucksack in die Ecke stellt.
+die Mappe, den Aktenkoffer, den City"=Rucksack in die Ecke stellt.
 Innerlich wird dann das \textsl{maillot jaune} übergestreift.
 Die Vorbereitungen sind schon alle erledigt (Beschrieben im Abschnitt \ref{sec:satellitenwochenende}).
 
@@ -595,7 +595,7 @@ Gute Ziele müssen folgende Eigenschaften aufweisen:
 Ebenfalls falsch wäre es, sich zu viele Ziele vorzunehmen.
 Da bestünde die Gefahr, den Fokus zu verlieren.
 
-Gute Radport-typische Ziele sind beispielsweise die laufend ausgeschriebenen \textsl{Challanges} auf Strava (\url{http://www.strava.com}).
+Gute Radport"=typische Ziele sind beispielsweise die laufend ausgeschriebenen \textsl{Challanges} auf Strava (\url{http://www.strava.com}).
 Man kann sich als registrierte User bestimmte monatliche Ziele vormerken.
 Typischerweise eine bestimmte Anzahl zurückgelegter Kilometer oder eine Anzahl Höhenmeter.
 Beim Erreichen des Ziele erhält man eine virtuelle \textsl{Trophy} in Form eines Abzeichens auf der Profilseite.
@@ -621,7 +621,7 @@ betont den spielerischen Charakter der körperlichen Betätigung mit zu erlangen
   \centering
   \includegraphics[width=0.7\textwidth]{figs/stickkcom.jpg}
 
-  % ein url-Befehl in einer float-Umgebung verlangt ein \protect
+  % ein url-Befehl in einer float"=Umgebung verlangt ein \protect
   \caption{Auf der Website \protect\url{http://www.stickk.com} lassen sich Ziele festlegen und darauf für sich selbst eine Wette abschliessen.
     Dass auch Geld gewettet werden kann, dass bei Nichterreichen futsch ist, soll das festhalten am Ziel erhöhen.}
   \label{fig:stickkcom}
