In 'Nachteile TLzH' den Abschnitt 'Wahl des Hotels' ergänzt

--- a/main.tex
+++ b/main.tex
@@ -203,7 +203,14 @@ Bei der Hausrunde fehlt der soziale Kick, der mit einer Woche Radfahren in einer
 Insbesonderen die <<weichen Fakten>>, welche ein Traininglager im Süden ausmachen werden bei \citeNP{Friedrich2008trainingslager}
 schön beschrieben.
 
-Der folgende Text beschäftigt sich nicht zuletzt auch mit diesen -- in meinen Augen nicht wirklich relevanten -- Nachteilen.
+Beobachtet man die Diskussionen auf \url{http://www.rennrad-news.de/forum} dann bekommt man nicht den Eindruck,
+dass es bei der Wahl des geeigenten Hotels für ein Trainingslager hauptsächlich um harte Trainingsaspekte geht.
+Es werden Dinge genannt, die auch für einen Strandurlaub gelten könnten:
+<<sauber>>, <<Essen ausgewogen und gut>>, <<Abends doch ein bißchen Bespassung>> \cite{tka19762010hotel},
+<<ruhig>>, <<Wellness"=Bereich>>, <<Personal ist freundlich, zum Teil deutschsprachig>> \cite{garfield22011hotel},
+<<Halbpension und Bettenaufschüttelservice>> und <<Flüssigkeitsausgleich>> \cite{orteb2011hotel}.
+Das ist nicht falsch und soll so sein. Es bestärkt aber die Vermutung, dass es bei einem TL im Süden mehr 
+um den Ferienaspekt als um frühe Performance geht.
 
 \section{Wann ist die richtige Zeit?}
 \label{sec:richtigezeit}
@@ -639,6 +646,6 @@ Das Risiko ist bei einem TL in einem exotischen Ort mit einem verlockenden Buffe
 
 \bibliographystyle{apacite}
 % \bibliography{trainingslager.bib}
-\bibliography{/roadbikebib/roadbike.bib}
+\bibliography{roadbikebib/roadbike.bib}
 
 \end{document}
