In 'Zeitpunkt' Anmerkung 'Training im Mai' eingefügt

--- a/main.tex
+++ b/main.tex
@@ -224,6 +224,8 @@ Der Februar hat im Mittel \textit{am wenigsten Niederschläge} von allen Monaten
 Der März ewas milder und immer noch sehr trocken.
 Mit geeigneter Bekleidung ist also ein \rv"=Training im Februar oder März
 in unseren Breitengraden durchführbar.
+Natürlich kann es bei uns über das ganze Jahr eine Woche durchregnen, aber spätestens im Mai gilt ein
+lokales Training auch für Frostbeulen als problemlos möglich \cite{capricorn2015ausland,raimi272015wetter}.
 
 \begin{table}
         \centering
