Abschnitt 'Ernährung vernachlässigen' angefügt

--- a/main.tex
+++ b/main.tex
@@ -549,7 +549,7 @@ Das Wochenende \textbf{danach} ist für:
 
 \section{Zu vermeidende Fehler}
 
-Ich führe für mich seit einigen Jahren 1 -- 2 \tlzh{} im Jahr durch.
+Ich führe seit einigen Jahren 1 -- 2 \tlzh{} im Jahr durch.
 Gemäss meiner Erfahrung sind hier die grössten Fehler aufgelistet.
 Zum grossen Teil decken sie sich mit den Fehlern, die man auch in einem TL in einem fernen Land machen kann \cite{Beck2016trainingslagersuenden}.
 Bei einem \tlzh{} kommen meines Erachtens noch ein paar Stolpersteine dazu.
@@ -629,11 +629,17 @@ betont den spielerischen Charakter der körperlichen Betätigung mit zu erlangen
 \end{figure}
 
 
-\subsection{Ernährung vernachlässigen}
 
-Das Risiko ist bei einem TL in einem exotischen Ort mit einem verlockenden Buffet sicher grösser.
 
 \subsection{Regenration vernachlässigen}
+
+\subsection{Ernährung vernachlässigen}
+
+Auch zur Regeneration gehört die richtige Ernährung.
+Vielleicht im Rahmen eines TL ein Punkt, den man gerne etwas schleifen lässt.
+Schliesslich hat man Ferien und treibt viel Sport -- entsprechend der Hunger.
+Eine Woche reicht sicher nicht, um die Ernährung \emph{umzustellen}.
+Aber vielleicht ist gerade diese Woche ideal, um die Sporternährung zu optimieren.
 
 \subsection{Den Trainingsreiz nicht optimal in die Form retten}
 
