Abschnitt 'Regeneration vernachlässigen' angefügt

--- a/main.tex
+++ b/main.tex
@@ -633,6 +633,12 @@ betont den spielerischen Charakter der körperlichen Betätigung mit zu erlangen
 
 \subsection{Regenration vernachlässigen}
 
+Das Training in intensiven Einheiten, mit Ruhepause dazwischen wird \emph{Blocktraining} genannt.
+Dabei ist die Pause genau so entscheidend wie das Training.
+Ein eindrückliches Beispiel ist hier Kurt Searvogel, der 2015 den neuen Jahres-Rekord auf dem Velo aufstellte.
+<<Trotz>> dem vielen Training von Täglich über 300\,km und insgesammt 120'805 Kilometer nahm sein Form ab,
+sein Stundenschnitt tiefer.
+
 \subsection{Ernährung vernachlässigen}
 
 Auch zur Regeneration gehört die richtige Ernährung.
