--- a/main.tex
+++ b/main.tex
@@ -215,7 +215,7 @@ wohl kalt aber sehr trocken ist.
 Der Februar hat im Mittel \textit{am wenigsten Niederschläge} von allen Monaten (Tabelle \ref{tab:niederschlag}).
 Der März ewas milder und immer noch sehr trocken.
 Mit geeigneter Bekleidung ist also ein \rv"=Training im Februar oder März
-in unseren Breitengraden durchführbar.
+in unseren Breitengraden mit etwas Wetterglück durchführbar.
 Natürlich kann es bei uns über das ganze Jahr eine Woche durchregnen, aber spätestens im Mai gilt ein
 lokales Training auch für Frostbeulen als problemlos möglich \cite{capricorn2015ausland,raimi272015wetter}.
 
