Abschnitt 'Trainingsreiz nicht in die Form retten' mit Text gefüllt

--- a/main.tex
+++ b/main.tex
@@ -649,6 +649,11 @@ Aber vielleicht ist gerade diese Woche ideal, um die Sporternährung zu optimier
 
 \subsection{Den Trainingsreiz nicht optimal in die Form retten}
 
+Nach dem TL braucht es eine gewisse Regeneration. Mit der Erholung steigt jedoch die momentane Form.
+Es wäre schade, nach einem solchen Trainingslager diese Form nicht in die weitere Trainingsplanung einzubauen.
+Hier schliesst sich der Kreis wieder. Wenn jetzt nämlich das Trainingslager zeitlich günstig gesetzt wurde,
+kann die Form im nächsten Blocktraining weiter ausgebaut werden.
+
 
 \bibliographystyle{apacite}
 % \bibliography{trainingslager.bib}
