--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 % Datei: Documents/rennvelo/trainingslager/main.tex
 % Begonnen: 14.11.2015 
 %
-% Einteilung des Paperformates, des Satzspiegels und eine Bindekorrektur
+% Einteilung des Papierformats, des Satzspiegels und einer Bindekorrektur
 \documentclass[a4paper,DIV13,BCOR0cm,draft=TRUE]{scrartcl}
 
 % Sprach-Einstellungen
@@ -69,8 +69,8 @@
 \begin{document}
 
 % Neudefinition einiger Bezeichner
-\renewcommand*\contentsname{Inhalt} % Standart: Inhaltsverzeichnis
-\renewcommand*\refname{Quellen} % Standart: Literaturverzeichnis
+\renewcommand*\contentsname{Inhalt} % Standard: Inhaltsverzeichnis
+\renewcommand*\refname{Quellen} % Standard: Literaturverzeichnis
 
 % \titlehead{}
 \lhead{\tlzh}
