Einbinden der bib-datei "trainingslager.bib"
Die "trainingslager.bib" war funktionslos, weil aukommentiert. Endlich bin
ich auf den Trichter gekommen, wie ich das Problem von zwei bib-Files löse --
nämlich die bib-Files in \bibliography zusammen zu nehmen. Doppelte Einträge
in "trainingslager.bib" und "roadbike.bib" wurden entfernt.

--- a/main.tex
+++ b/main.tex
@@ -483,6 +483,18 @@ Bezüglich Verhaltensänderung gibt es für Fahren bei Kälte im Netz und Fachze
 
 \end{itemize*}
 
+\section{Training mit einem Smart Trainer und Zwift}
+
+Eine Lösung, um gänzlich unabhängig von Saison und Witterung zu sein ist das Indoor-Training mit einem (Smart-)Trainer und Zwift.
+Ein Smart Trainer hat den Vorteil, dass man basierend auf der tatsächlichen Watt-Leistung trainieren kann.
+Das macht das Training effizienter.
+
+In Kombination mit Zwift wird das grundsätzlich langweilige Indoor-Training noch um einen sozialen Aspekt bereichert.
+Zwift bietet fertige Trainings-Pläne. Siehe \url{http://community.zwift.com/news/6514-zwift-how-to-starting-a-training-plan}.
+
+Bei \citeNP{DCRainmaker2018trainingplanzwift} findeet sich eine ausführliche Darstellung der
+Im Mai 2018 eingeführten Trainingsplan-Funktion in Zwift.
+
 \section{Regeneration}
 
 Training muss Periodisiert werden. Ein umfangreiches Trainingspensum fordert eine entsprechende Regenerationsphase.
@@ -596,17 +608,21 @@ Gute Ziele müssen folgende Eigenschaften aufweisen:
 Ebenfalls falsch wäre es, sich zu viele Ziele vorzunehmen.
 Da bestünde die Gefahr, den Fokus zu verlieren.
 
-Gute Radport"=typische Ziele sind beispielsweise die laufend ausgeschriebenen \textsl{Challanges} auf Strava (\url{http://www.strava.com}).
+Gute Radport"=typische Ziele sind beispielsweise die laufend ausgeschriebenen
+\textsl{Challanges} auf Strava (\url{http://www.strava.com}).
 Man kann sich als registrierte User bestimmte monatliche Ziele vormerken.
 Typischerweise eine bestimmte Anzahl zurückgelegter Kilometer oder eine Anzahl Höhenmeter.
 Beim Erreichen des Ziele erhält man eine virtuelle \textsl{Trophy} in Form eines Abzeichens auf der Profilseite.
-Der Nachteil ist, dass die Ziele nicht frei gewählt werden können -- sind also je nach Trainingsstand allenfalls zu leicht oder zu schwer.
+Der Nachteil ist, dass die Ziele nicht frei gewählt werden können --
+sind also je nach Trainingsstand allenfalls zu leicht oder zu schwer.
 
-Eine Website, die sich ganz dem Erreichen eines bestimmten Zieles verschrieben hat ist Stickk (\url{http://www.stickk.com}).
+Eine Website, die sich ganz dem Erreichen eines bestimmten Zieles verschrieben hat
+ist Stickk (\url{http://www.stickk.com}).
 Es lassen sich hier frei Ziele formulieren.
 Der spezielle Anreiz ist, dass man gewissermassen auf sich selbst wetten kann.
 Das Geld ist futsch, wenn das Ziel nicht erreicht wird.
 Um Schummeln zu umgehen, können Schiedsrichter ernannt werden (z.B. Kollegen, die Ehefrau), die das Erreichen des Ziels bestätigen müssen.
+
 Studien haben gezeigt, dass Ziele, bei denen es um Geld geht eher erreicht werden, als wenn es eine reine <<Ehrensache>> bleibt.
 
 Schon nur das Dokumentieren der eigenen Leistung hilft einem sich selbt anzuspornen,
@@ -616,7 +632,6 @@ auf <<Fitocracy>> (\url{https://www.fitocracy.com/home/}).
 Insbesondere Fitocracy
 (eine Wortschöpfung aus <<fitness>> und <<democracy>>)
 betont den spielerischen Charakter der körperlichen Betätigung mit zu erlangenden Punkten und Levels.
-
 
 \begin{figure}[htb]
   \centering
@@ -656,7 +671,6 @@ kann die Form im nächsten Blocktraining weiter ausgebaut werden.
 
 
 \bibliographystyle{apacite}
-% \bibliography{trainingslager.bib}
-\bibliography{roadbikebib/roadbike.bib}
+\bibliography{trainingslager.bib,roadbikebib/roadbike.bib}
 
 \end{document}
