Grafik zu Zwift angefügt

--- a/main.tex
+++ b/main.tex
@@ -495,6 +495,17 @@ Zwift bietet fertige Trainings-Pläne. Siehe \url{http://community.zwift.com/new
 Bei \citeNP{DCRainmaker2018trainingplanzwift} findeet sich eine ausführliche Darstellung der
 Im Mai 2018 eingeführten Trainingsplan-Funktion in Zwift.
 
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=1\textwidth]{figs/zwifttrainingplans.jpg}
+
+  % ein url-Befehl in einer float"=Umgebung verlangt ein \protect
+  \caption{Trainingspläne in Zwift (erreicht man mit der Taste E)}
+  \label{fig:zwifttrainingplans}
+
+\end{figure}
+
 \section{Regeneration}
 
 Training muss Periodisiert werden. Ein umfangreiches Trainingspensum fordert eine entsprechende Regenerationsphase.
