Kleine Ergaenzungen, Korrekturen

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 % Datei: Documents/rennvelo/trainingslager/main.tex
-% Begonnen: 14.11.2015 
+% Begonnen: 14.11.2015
+% Last Update: 20.08.2018
 %
 % Einteilung des Papierformats, des Satzspiegels und einer Bindekorrektur
 \documentclass[a4paper,DIV13,BCOR0cm,draft=TRUE]{scrartcl}
@@ -80,14 +81,14 @@
 \author{Marco Strehler}
 
 %\publishers{}
-\date{18.\,August\,2018}
+\date{3.\,Oktober\,2018}
 
 \maketitle
 %\clearpage
 
 \begin{abstract}
-Diese Zusammenstellung enthält Tipps zur Vorbereitung und Durchführung eines einwöchigen \rv"=Trainingslager zu Hause (\tlzh).
-Dabei werden die Vor- und Nachteile erörtert im Vergleich zu einem konventionellen Trainingslager
+Diese Zusammenstellung enthält Tipps zur Vorbereitung und Durchführung eines \rv"=Trainingslager zu Hause (\tlzh).
+Dabei werden die Vor- und Nachteile im Vergleich zu einem konventionellen Trainingslager erörtert
 (typischerweise fremdorganisiert und in mediterranen Regionen). 
 Dies mit dem Ziel eines optimalen Resultates im Verhältnis zur aufgewendeten Zeit und anfallenden Kosten.
 \end{abstract}
@@ -95,26 +96,41 @@ Dies mit dem Ziel eines optimalen Resultates im Verhältnis zur aufgewendeten Ze
 \tableofcontents
 \section{Einleitung}
 
-Ein Trainingslager (TL) im Frühling dient dazu
-schon früh stabile Grundlagen für die anstehende \rv"-Saison zu legen.
+Ein Trainingslager (TL) -- typischerweise im Frühling -- dient dazu
+schon früh stabile Grundlagen für die anstehende \rv"=Saison zu legen.
 Neben dem körperlichen Training kann man sich in einem TL auch mit anderen Themen rund um das Training beschäftigen.
 Beispiele sind: Ernährung, Regeneration, \rv"=Technik oder Radrennhistorie.
 Durch eine solche Immersion in die Materie wird die Motivation weit über das TL hinaus gestärkt.
 
 Wird von einem Trainings\textsl{lager} gesprochen, impliziert das ein Ortswechsel.
-Typischerweise an einen Ort, wo Frühling ist, wenn in Nord- und Mitteleuropa noch Eis und Schnee herrscht.
+Typischerweise an einen Ort, wo Frühling ist, wenn in Nord- und Mitteleuropa noch Kälte, Eis und Schnee herrscht.
 
-In der Regel wird dazu ein Pauschalangebot mit Hotel, geführten Trainingstouren und Möglichkeit der \rv-Miete.
+In der Regel wird dazu ein Pauschalangebot mit Hotel, geführten Trainingstouren und Möglichkeit der \rv"=Miete.
 Etwas luxuriösere Angeboten bieten noch Trainingsplanung, Begleitfahrzeug, Schrauberplatz und Massage.
 
 Es gibt m.E. jedoch wenig wirklich objektive Gründe, als Nicht"=Profi für ein TL zu verreisen.
 Umso mehr, als ein solches TL sich prima zu Hause durchführen lässt.
-Ich bin überzeugt, dass ein \tlzh{} mehr Vor"= als Nachteile hat und genau so viel Spass macht.
+Ich bin überzeugt, dass ein \tlzh{} viele Vorteile hat und genau so viel Spass macht.
 Die folgende Zusammenstellung von Tipps und Hinweisen soll helfen, die Vorteile gut zu nutzen und allfällige Nachteile
 auszugleichen.
 
-% Hier kommt dann noch eine Inhaltsangabe der Kapitel.
-% Im Abschnitt \ref{sec:wiesozuhause} beschreibe ich die Vor- und Nachteile eines \tlzh{}.
+Es finden sich folgende Inhalte in den einzelnen Abschnitten.
+Im Abschnitt \ref{sec:wiesozuhause} beschreibe ich die Vor- und Nachteile eines \tlzh{}.
+Der Abschnitt \ref{sec:richtigezeit} beschäftigt sich mit dem passenden Timing im Bezug
+auf Klima und Jahresplanung eines \tlzh{}.
+Hier soll auch etwas für die <<Reize vor der Haustüre>> (wo auch immer die ist) geworben werden
+Der Abschnitt \ref{sec:trainingsplanung} geht auf die detailliertere Planung eines solchen TL (als ganzes) ein.
+Wichtig ist dabei natürlich auch die Streckenplanung. Was es dabei zu beachten lohnt, wird in Abschnitt
+\ref{sec:streckenplaung} dargelegt.
+Der Abschnitt \ref{sec:tagesplanung} geht im Detail auf die Planung der einzelnen Tage ein.
+Gerade in unseren Breitengrade muss im Frühling oder Herbst auch mit Kälte gerechnet werden.
+Zu diesem Thema geht der Abschnitt \ref{sec:training-in-kaelte} ein.
+Die Möglichkeiten mit Smart-Trainer und virtueller Realität ein spannendes, kurzweiliges Training
+zu gestalten ist Thema im Abschnitt \ref{sec:training-smart-trainer} dargelegt.
+Dem Thema Regeneration ist der Abschnitt \ref{sec:regeneration} gewidmet.
+Ideen für Nebenprojekte werden im Abschnitt \ref{sec:nebenprojekte} aufgeführt.
+Weitere Ideen, um ein TL noch etwas auzudehnen und zu vertiefen mit einem Satellitenwochenende wird
+im letzten Abschnitt \ref{sec:satellitenwochenende} dargelegt.
 
 \section{Wieso ein Trainingslager zu Hause?}
 \label{sec:wiesozuhause}
@@ -312,6 +328,7 @@ den 5.\,April 2026.}
 
 
 \section{Trainingsplanung}
+\label{sec:trainingsplanung}
 
 Grundsätzliches Vorgehen bei der Planung (modifiziert nach \citeNP{Beck2015}):
 
@@ -373,22 +390,51 @@ Ideal wäre hier, das TL in den Wochen 6, 5 oder 3 dieser Vorbereitungsphase zu 
 
 
 \section{Streckenplanung}
+\label{sec:streckenplaung}
 
 Während einem \tlzh{} ist man frei. Entsprechend den Trainingszielen sollen die Strecken gewählt werden.
 
-Ein Punkt, der bei der Planung der Strecke allenfalls ins Gewicht fällt,
+Ein Punkt, der bei der Planung der Strecke ins Gewicht fällt,
 sind die Unterschiede im Verkehr zwischen Wochentagen und Wochenende.
 So sind Hauptstrassen, die man von Sonntagsausfahrten kennt plötzlich voller Laster.
-Andererseits sind Ausflugziele besonders an den Wochenenden viel befahren.
+Andererseits sind Ausflugziele oder Pässe besonders an den Wochenenden viel befahren.
 
 Oft wird bei den TL ein Begleitfahrzeug angeboten.
 Der Vorteil bei einem \tlzh{} ist allerdings, dass das Netz des öffentlichen Verkehrs bei uns
 wesentlich dichter ist und das man bei einer nicht reparierbaren Panne oder totaler Erschöpfung
-mitsamt dem \rv{} nutzen kann. Auch könnte man sich mit den eingesparten Kosten auch ein Taxi leisten.
+mitsamt dem \rv{} nutzen kann.
 
- 
+Wenn man ein TL in gewohnter Umgebung durchführt, kommt noch ein weiterer Vorteil zum Tragen.
+Durch die Ortskenntnisse fällt die Planung einfacher.
+Bergige Strecken für Höhenmeter-Training
+oder flache Etappen für Grundlagentraining sind bekannt und müssen nicht speziell erkundigt oder 
+recherchiert werden.
+Trotzdem kann es sich lohnen, auf ein TL nochmals hinter die Bücher zu gehen.
+Das ausprobieren von neuen Strecken ohne Druck ist nach meiner Erfahrung ein grosser Motivationschub.
+
+Eine Liste mit Websites für Planung der Strecken findet sich in Tabelle \ref{tab:gps-websites}.
+
+\begin{table}
+  \centering
+  \begin{tabular}{l}
+    \toprule
+      Websites mit GPS-Daten\\
+    \midrule
+        \url{http://www.gpsies.com}\\
+        \url{http://www.gps-tour.info}\\
+        \url{http://www.bergfex.ch/sommer/schweiz/touren/rennrad/}\\
+        \url{http://www.naviki.org/de/naviki/karten/}\\
+        \url{http://tourwerk.com}\\
+    \bottomrule
+  \end{tabular}
+  \caption{Liste von Websites mit GPS-Daten für Streckenplanung.}
+  \label{tab:gps-websites}
+\end{table}
+
+
 
 \section{Tagesplanung}
+\label{sec:tagesplanung}
 
 Ein Vorschlag für eine Tagesplanung findet sich bei \citeNP{Boehme2016trainingstag}.
 
@@ -431,7 +477,7 @@ Auch gibt es einen doppelten Stimulus.
 Dazwischen 2-4 Stunden Pause, am besten mit einer Schlafphase (Ausschüttung Wachstumshormon).
 
 \section{Training in Kälte}
-
+\label{sec:training-in-kaelte}
 \subsubsection{Körperliche Adaption}
 Ein \Tlzh{} im März oder April wirft die Frage nach Training in der Kälte auf.
 Die Anpassung an die Kälte erfolgt beim Menschen vorwiegend durch Verhaltensänderung.
@@ -484,6 +530,7 @@ Bezüglich Verhaltensänderung gibt es für Fahren bei Kälte im Netz und Fachze
 \end{itemize*}
 
 \section{Training mit einem Smart Trainer und Zwift}
+\label{sec:training-smart-trainer}
 
 Eine Lösung, um gänzlich unabhängig von Saison und Witterung zu sein ist das Indoor-Training mit einem (Smart-)Trainer und Zwift.
 Ein Smart Trainer hat den Vorteil, dass man basierend auf der tatsächlichen Watt-Leistung trainieren kann.
@@ -507,8 +554,9 @@ Im Mai 2018 eingeführten Trainingsplan-Funktion in Zwift.
 \end{figure}
 
 \section{Regeneration}
+\label{sec:regeneration}
 
-Training muss Periodisiert werden. Ein umfangreiches Trainingspensum fordert eine entsprechende Regenerationsphase.
+Training muss periodisiert werden. Ein umfangreiches Trainingspensum fordert eine entsprechende Regenerationsphase.
 Es besteht die Gefahr, dass die Verpflichtungen des Alltags jedoch nicht ausreichend Raum für die entsprechend notwendige Regeneration lassen.
 Hier gilt es, die Belastung in dieser Phase gering zu halten: Termine und Pendenzen sollen vor dem TL erledigt werden.
 
@@ -531,6 +579,7 @@ Alles, was hilft, schneller zu regenerieren und sich wieder fit für den nächst
 % 
 
 \section{Nebenprojekte umsetzen}
+\label{sec:nebenprojekte}
 
 Neben Trainieren, Essen, Schlafen bleibt noch etwas Zeit.
 Diese kann genutzt werden, um Projekte rund um das \rv{} umzusetzen.
@@ -541,9 +590,8 @@ Diese kann genutzt werden, um Projekte rund um das \rv{} umzusetzen.
         \item Rennsport"=Geschichte: Bücher zum Thema Radrennsport lesen.
         \item Werkstatt: Aufbau einer eigenen Radwerkstatt (Schrauberecke).
                 Dazu Literatur studieren und allenfalls eigenes kleines Projekt durchziehen.
-        \item Regelmässig in den entsprechenden Foren aktiv werden.
+        \item Regelmässig in den entsprechenden \rv"=Foren aktiv werden.
 \end{itemize}
-
 
 \section{Satellitenwochenende vor und nach dem Lager}
 \label{sec:satellitenwochenende}
@@ -571,6 +619,7 @@ Das Wochenende \textbf{danach} ist für:
 
 
 \section{Zu vermeidende Fehler}
+\label{sec:zu-vermeidende-fehler}
 
 Ich führe seit einigen Jahren 1 -- 2 \tlzh{} im Jahr durch.
 Gemäss meiner Erfahrung sind hier die grössten Fehler aufgelistet.
